[STYLE] fixing content spacing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,7 @@
-section {
+#list {
   flex: 1;
+}
+
+#editing {
+  flex: 4;
 }
